Replaced `@Slf4j` annotation with manual `Logger` initialization, integrated `LoggerFactory` for better logging control, added extensive Javadoc for core classes (`CommandExecutor`, `CommandInterruptedException`, `ForLoop`, `TimedLoop`, `ExecutorService`, etc.), updated method signatures for improved clarity, and refactored loop and executor APIs for consistency.